gnome-software (3.26.3-1) UNRELEASED; urgency=medium

  * New upstream release
  * Use appstream-util appdata-to-news to install NEWS

 -- Jeremy Bicha <jbicha@debian.org>  Sat, 11 Nov 2017 23:19:47 -0500

gnome-software (3.26.2-1) unstable; urgency=medium

  * New upstream release
  * debian/control.in:
    - Bump required fwupd to >= 0.9.7
  * Drop all patches, applied in new release.

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 10 Nov 2017 09:30:30 -0500

gnome-software (3.26.1-2) unstable; urgency=medium

  * Cherry-pick upstream fixes to make gnome-software build against fwupd 1.0.
    (Closes: #879006)
  * Enable GUDev support only on Linux. (Closes: #875916)

 -- Michael Biebl <biebl@debian.org>  Sat, 21 Oct 2017 05:36:14 +0200

gnome-software (3.26.1-1) unstable; urgency=medium

  * New upstream release
  * Bump Standards-Version to 4.1.1

 -- Jeremy Bicha <jbicha@debian.org>  Thu, 05 Oct 2017 22:02:21 -0400

gnome-software (3.26.0-2) unstable; urgency=medium

  * Only build with valgrind on architectures where valgrind is available
  * Bump Standards-Version to 4.1.0

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 15 Sep 2017 08:20:01 -0400

gnome-software (3.26.0-1) unstable; urgency=medium

  [ Jeremy Bicha ]
  * Release to unstable
  * New upstream release
  * Add apport hook to report which gnome-software plugins are installed
  * debian/rules
    - Add workaround for Ubuntu translations issue

  [ Iain Lane ]
  * debian/rules: Make sure to not build with -Wl,-Bsymbolic-functions

 -- Jeremy Bicha <jbicha@debian.org>  Thu, 14 Sep 2017 20:30:08 -0400

gnome-software (3.25.91-1) experimental; urgency=medium

  * debian/compat: Bump to 10, mainly to get --parallel by default.
  * New upstream release 3.25.91 (LP: #1706715)
    + Doesn't let you cancel PackageKit (.deb) installations when PK says it's
      not allowed. (LP: #1707053)

 -- Iain Lane <laney@debian.org>  Thu, 24 Aug 2017 16:33:38 +0100

gnome-software (3.25.4-1) experimental; urgency=medium
