@@ -2,6 +2,7 @@ gnome-software (3.26.3-1) UNRELEASED; urgency=medium
 
   * New upstream release
   * Use appstream-util appdata-to-news to install NEWS
+  * Build gnome-software-plugin-snap again (LP: #877684)
 
  -- Jeremy Bicha <jbicha@debian.org>  Sat, 11 Nov 2017 23:19:47 -0500
 
